Ranking Question Mobile Fixed Background Image Sizing

--- a/app/scss/brands/maytag/_answers.scss
+++ b/app/scss/brands/maytag/_answers.scss
@@ -667,8 +667,8 @@ div.img-wrap.selected {
 		width: 566px;
 		height: 62.2px;
 		background: url('../img/ranking-bg.png') no-repeat;
-        background-position: 0 0px;
-        background-size: 100% 100%;
+        background-position: center center;
+        background-size: cover;
         border-radius: 6px;
         padding-left: 0 !important;
         text-align: center;
