--- a/app/scss/structure/_app-main.scss
+++ b/app/scss/structure/_app-main.scss
@@ -1352,7 +1352,6 @@ a.boxes-icon-split:hover, a.boxes-icon-2:hover, a.picture-3:hover {
     }
     // Ranking
     .ranking {
-        text-align: left;
         width: 96%;
         margin-top: 0 !important;
         ul {
